<resources>
    <string name="app_name">ECommerce App</string>
    <string name="home">home</string>
    <string name="categories">categories</string>
    <string name="wishlist">wishlist</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_do_you_search_for">what do you search for?</string>
    <string name="nike_air_jordan">Nike Air Jordan</string>
    <string name="resizable_text_read_more">…read more</string>
    <string name="resizable_text_read_less"> read less</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view_all">view all</string>
    <string name="men_s_fashion">men\'s fashion</string>
    <string name="tv_satellites_accessories"><![CDATA[TVs, Satellites & Accessories]]></string>
    <string name="product_details">Product details</string>
    <string name="welcome_back_to_route">Welcome Back To Route</string>
    <string name="please_sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="user_name">User name</string>
    <string name="enter_your_email">enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forgot_password">forgot password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account"><u>Create account</u>.</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Your Password</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign up</string>
    <string name="brands">Brands</string>
    <string name="log_out">Logout</string>
    <string name="try_again">Try Again</string>
    <string name="settings">Settings</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="my_information">My Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="account">Account</string>
    <string name="check_out">Check Out</string>
    <string name="total_price">Total price</string>
    <string name="cart">Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_name">Address name</string>
    <string name="address_details">Address details</string>
    <string name="city">City</string>
    <string name="save_address">Save Address</string>
    <string name="add_new_sipping_address">Add New Sipping Address</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="credit_card">Credit card</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="total_amount">Total Amount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="payment_method">Payment Method</string>
    <string name="you_will_receive_your_product_in_2_3_days">You will receive your product in 2-3 days</string>
    <string name="continue_shopping">Continue Shopping</string>
</resources>