<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.ecommerceapp.ui.tabs.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:padding="16dp"
        tools:context=".ui.tabs.auth.login.LoginActivity">

        <ImageView
            android:id="@+id/route_txt"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="75dp"
            android:adjustViewBounds="true"
            android:src="@drawable/white_route_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/welcome_back_to_route"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route_txt" />

        <TextView
            android:id="@+id/sign_in_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_sign_in_with_your_mail"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_txt" />

        <TextView
            android:id="@+id/user_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:error="@{vm.emailError}"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:helperTextTextAppearance="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@id/user_name_txt">

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.email}"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:error="@{vm.passwordError}"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:helperTextTextAppearance="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@id/password_txt"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.password}"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_txt" />

        <TextView
            android:id="@+id/do_not_have_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/do_not_have_account_txt"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_product_animation"
            app:lottie_speed="2.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>