<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.ecommerceapp.ui.tabs.auth.signup.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:padding="16dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.tabs.auth.signup.RegisterActivity">

                <ImageView
                    android:id="@+id/route_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginTop="40dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/white_route_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/full_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/route_txt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxStrokeColor="@color/primary_color"
                    app:error="@{vm.userNameError}"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:helperTextTextAppearance="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/full_name_txt">

                    <EditText
                        android:id="@+id/full_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/enter_your_full_name"
                        android:inputType="text"
                        android:text="@={vm.userName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/full_name_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxStrokeColor="@color/primary_color"
                    app:error="@{vm.emailError}"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:helperTextTextAppearance="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/email_txt">

                    <EditText
                        android:id="@+id/email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:text="@={vm.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/phone_no_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_no_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxStrokeColor="@color/primary_color"
                    app:error="@{vm.phoneError}"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:helperTextTextAppearance="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/phone_no_txt">

                    <EditText
                        android:id="@+id/phone_no_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/enter_your_phone_number"
                        android:inputType="phone"
                        android:text="@={vm.phone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/password_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_no_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxStrokeColor="@color/primary_color"
                    app:error="@{vm.passwordError}"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:helperTextTextAppearance="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/password_txt"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:text="@={vm.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/re_password_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/re_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/re_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxStrokeColor="@color/primary_color"
                    app:error="@{vm.passwordConfirmationError}"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:helperTextTextAppearance="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/re_password_txt"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/re_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/re_enter_password"
                        android:inputType="textPassword"
                        android:text="@={vm.passwordConfirmation}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_product_animation"
                    app:lottie_speed="2.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>